# Hammering_Task

./: A.csv  CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  alphaDsegment.csv  cmake_install.cmake  compile_commands.json  curTorque.csv  fd_C.csv  fd_H.csv  force00.csv  force01.csv  force10.csv  force11.csv  force20.csv  force21.csv  force30.csv  force31.csv  jac_00.csv  jac_01.csv  jac_10.csv  jac_11.csv  jac_20.csv  jac_21.csv  jac_30.csv  jac_31.csv  lambda.csv  lambda0.csv  lambda1.csv  lambda2.csv  lambda3.csv  matrix-tasks-C.csv  matrix-tasks-H.csv  tasks-alpha.csv  tasks-q.csv
.cache/clangd/index/: BSpline.cpp.CCDAEA33D4E965A0.idx  BSpline.h.80F4E6AA71BB63D0.idx  GeometricMove.cpp.533291BD13209311.idx  GeometricMove.h.85363FBB488BBCA9.idx  Get_In_Position_Task.cpp.13A9497DDB0407AB.idx  Get_In_Position_Task.h.F5E6970C6724D0EE.idx  HammeringFSM.cpp.9E1060F41F1ECEA0.idx  HammeringFSM.h.81BE15835428BD03.idx  HammeringFSM_Initial.cpp.FDD55E86AB83E9FE.idx  HammeringFSM_Initial.h.4B365634C412AB61.idx  Hammering_FSM_Controller.cpp.94DEB47791428B2D.idx  Hammering_FSM_Controller.h.D91190BEDA35FAAC.idx  Hammering_FSM_Controller_Initial.cpp.E8142D3A4E959107.idx  Hammering_FSM_Controller_Initial.h.EEBDE9416B603C6E.idx  TableAvoidance.cpp.A359EE0E418ED459.idx  TableAvoidance.h.4CFCFA078A4EC402.idx  api.h.846120DAAA363101.idx  api.h.C0EA146EF30C86D5.idx  lib.cpp.B21389519102EA77.idx  lib.cpp.F0792F0CA67BBD0B.idx
addFiles/: HRP5Pmain.urdf  HRP5Pmain.xml  Hammer_mesh-ch.txt  README.md  hammer.stl  hammer_scaled.stl  nail.xml
etc/: HammeringFSM.in.yaml  Hammering_FSM_Controller.in.yaml  Hammering_FSM_Controller.yaml
log/: latest_list
plugin/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
plugin/.cache/clangd/index/: NailSensorPlugin.cpp.57D81F6E81697829.idx  NailSensorPlugin.h.9CD8D832CABC5D0F.idx
plugin/ament_cmake_package_templates/: templates.cmake
plugin/etc/: NailSensorPlugin.in.yaml
plugin/src/: NailSensorPlugin.cpp  NailSensorPlugin.h
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  HammeringFSM.cpp  HammeringFSM.h  Hammering_FSM_Controller.cpp  Hammering_FSM_Controller.h  Makefile  api.h  cmake_install.cmake  lib.cpp
src/states/: BSpline.cpp  BSpline.h  BSplineVelState.cpp  BSplineVelState.h  CMakeLists.txt  CTestTestfile.cmake  GeometricMove.cpp  GeometricMove.h  Get_In_Position_Task.cpp  Get_In_Position_Task.h  HammeringFSM_Finish.cpp  HammeringFSM_Finish.h  HammeringFSM_Hammering.cpp  HammeringFSM_Hammering.h  HammeringFSM_Initial.cpp  HammeringFSM_Initial.h  Hammering_FSM_Controller_Initial.cpp  Hammering_FSM_Controller_Initial.h  Makefile  TableAvoidance.cpp  TableAvoidance.h  cmake_install.cmake
